# sub2socks

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml
.claude/plans/: dazzling-crunching-wren-agent-a11c1599a05eaf423.md  dazzling-crunching-wren.md
.claude/skills/verify/: SKILL.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
src/: config.rs  db.rs  lib.rs  main.rs  mihomo.rs  node_test.rs  socks_proxy.rs  subscriber.rs  types.rs
src/static/: app.css  app.js  index.html
src/static/css/: style.css
